# ruqola-rust

./: .gitignore  Cargo.toml  README.md
libauthenticationbase/: Cargo.toml
libauthenticationbase/src/: authenticationsettings.rs  lib.rs
libddpapi/: Cargo.toml
libddpapi/examples/: README.txt  example-ddp-connection.rs
libddpapi/src/: authenticationmanager.rs  authenticationutils.rs  ddpclient.rs  ddpmessage.rs  ddputils.rs  lib.rs  registration.rs  rocketchatmessage.rs
librocketchatrestapi/: Cargo.toml
librocketchatrestapi/example/: example-get-permissions.rs  get-list-commands-example.rs  get-room-example.rs  helper.rs
librocketchatrestapi/src/: errors.rs  lib.rs
librocketchatrestapi/src/api/: mod.rs
librocketchatrestapi/src/api/methods/: base.rs  channels.rs  chat.rs  commands.rs  invite.rs  licenses.rs  misc.rs  mod.rs  moderation.rs  permissions.rs  personalaccesstoken.rs  restapiutils.rs  rooms.rs  teams.rs
libruqolacore/: Cargo.toml
libruqolacore/examples/: example-get-list-commands.rs  example-get-list-permissions.rs  example-get-rooms.rs
libruqolacore/examples/helper/: helper.rs
libruqolacore/src/: avatarinfo.rs  bannerinfo.rs  bannerinfos.rs  commandinfo.rs  commandpreview.rs  commands.rs  customsoundinfo.rs  customsoundinfos.rs  deviceinfo.rs  file.rs  fileattachments.rs  invitation.rs  invitations.rs  lib.rs  licensesmanager.rs  messageattachmentfield.rs  messageinfo.rs  messages.rs  notificationinfo.rs  ownuserpreferences.rs  permission.rs  permissionaccesstokeninfo.rs  permissionaccesstokeninfos.rs  permissions.rs  reaction.rs  retentioninfo.rs  rocketchataccount.rs  rocketchataccountmanager.rs  rocketchataccountsettings.rs  rocketchatbackend.rs  roles.rs  room.rs  rooms.rs  ruqolaserverconfigpassword.rs  user.rs
libruqolacore/src/command/: commandinfo.rs  commandpreview.rs  commands.rs  mod.rs
libruqolacore/src/data/fileattachments/: fileattachments1.json  fileattachments2.json  fileattachments3.json
libruqolacore/src/data/permissions/: permissions.json
libruqolacore/src/emoticons/: customemoji.rs  mod.rs
libruqolacore/src/invitation/: invitation.rs  invitations.rs  mod.rs
libruqolacore/src/invitations/: invitation.rs  invitations.rs  mod.rs
libruqolacore/src/languages/: appslanguageinfo.rs  downloadappslanguages.rs  mod.rs
libruqolacore/src/manager/: licensesmanager.rs  mod.rs  permissionsmanager.rs
libruqolacore/src/message/: block.rs  blockaccessoryoption.rs  blockaction.rs  channelinfo.rs  channels.rs  mentions.rs  messageattachment.rs  messageattachmentfield.rs  messagepinned.rs  messagetranslations.rs  messageurl.rs  mod.rs  reaction.rs  replies.rs
libruqolacore/src/ownuser/: mod.rs  ownuserpreferences.rs  servicepassword.rs
libruqolacore/src/roles/: mod.rs  role.rs  roles.rs
libruqolacore/src/room_info/: mod.rs  roominfo.rs
libruqolacore/src/status/: customuserstatus.rs  customuserstatusmodel.rs  mod.rs  statusmodel.rs
libruqolacore/src/teams/: mod.rs  teamcompleter.rs  teaminfo.rs  teamroom.rs  teamroomcompleter.rs
libruqolacore/tests/: test-deviceinfo.rs  test-rochetchataccountsettings.rs  test-rocketchataccountmanager.rs
ruqola-rust-cxx-qt/: Cargo.toml  build.rs
ruqola-rust-cxx-qt/qml/: main.qml
ruqola-rust-cxx-qt/src/: main.rs
ruqola-rust-slint/: Cargo.toml  README-translation.txt  TODO  initialize_environment.sh  ruqola-rust.pot  update_translations.sh
ruqola-rust-slint/src/: build.rs  commandlineoptions.rs  main.rs  ruqolawindow.rs  utils.rs
ruqola-rust-slint/src/slint/: icons.slint  mainwindow.slint  page.slint
ruqola-rust-slint/src/slint/dialogs/: aboutdialog.slint  accountconfiguration.slint  accountsettings.slint
ruqola-rust-slint/src/slint/screens/: mainpage.slint  selectaccount.slint
ruqola-rust-slint/src/slint/singletons/: logic.slint  screencontroller.slint
