[workspace]
members = [
    "libauthenticationbase",
    "libddpapi",
    "librocketchatrestapi",
    "libruqolacore",
    "ruqola-rust-slint",
    "ruqola-rust-cxx-qt",
]
default-members = ["ruqola-rust-slint"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Laurent Montel <laurent.montel@kdab.com>"]
license = "LGPL-2.0-or-later"
